Fixed: img formatting in html, top padding in about me, and flex alignment of myWork section

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -133,7 +133,7 @@ li, li a {
     display: flex;
     justify-content: flex-start;
     text-align: left;
-    padding: 10% 12% 5% 10%;
+    padding: 2% 12% 5% 10%;
     color: whitesmoke;
     text-shadow: 1px 1px 3px black;
 }
@@ -158,6 +158,7 @@ li, li a {
     justify-content: flex-start;
     text-align: left;
     color: whitesmoke;
+    padding-top: 2%;
     padding-bottom: 10px;
     text-shadow: 1px 1px 3px black;
 }
